--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,14 +16,16 @@
 <div class="container m-2" style="max-width: 100% ">
     <div class="row" th:fragment="list" xmlns:th="http://www.thymeleaf.org">
         <div class="col-sm-3" th:each="project, stat: ${projects}" style="padding:2%;">
-            <div class="card mb-3 projectCard">
-                <img class="card-img-top" th:src="${project.screenshot}"/>
-                <div class="card-body">
-                    <h5 class="card-title cardProjectTitle" th:title="${project.name}" th:text="${project.name}"/>
-                    <h6 class="text-muted" th:text="'By: '+ ${project.user.username}"/>
-                </div>
+            <a th:href="@{'/project/'+ ${project.id}}">
+                <div class="card mb-3 projectCard">
+                    <img class="card-img-top" th:src="${project.screenshot}"/>
+                    <div class="card-body">
+                        <h5 class="card-title cardProjectTitle" th:title="${project.name}" th:text="${project.name}"/>
+                        <h6 class="text-muted" th:text="'By: '+ ${project.user.username}"/>
+                    </div>
 
-            </div>
+                </div>
+            </a>
         </div>
     </div>
 
