Add teamwork to navbar

--- a/src/main/resources/templates/workSpaceNav.html
+++ b/src/main/resources/templates/workSpaceNav.html
@@ -64,8 +64,11 @@
                 </li>
 
                 <li sec:authorize="isAuthenticated()" class="nav-item" id="goWork">
-
                     <a class="nav-link">My Work</a>
+                </li>
+
+                <li sec:authorize="isAuthenticated()" id="goTeamWork" class="nav-item">
+                    <a class="nav-link">Team Work</a>
                 </li>
 
             </ul>
