--- a/src/main/resources/templates/mywork.html
+++ b/src/main/resources/templates/mywork.html
@@ -158,5 +158,11 @@
 <!--<script src="js/addProject.js"></script>-->
 <script src="js/fabricCreateMap.js"></script>
 
+<script>
+    $(document).ready(function(){
+        $("nav .active").removeClass("active");
+        $("#link-myWork").addClass("active");
+    });
+</script>
 </body>
 </html>
