--- a/src/main/resources/templates/teamWork.html
+++ b/src/main/resources/templates/teamWork.html
@@ -63,6 +63,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/3.6.2/fabric.min.js"></script>
 
 <script src="js/fabricCreateMap.js"></script>
-
+<script>
+    $(document).ready(function(){
+        $("nav .active").removeClass("active");
+        $("#link-teamWork").addClass("active");
+    });
+</script>
 </body>
 </html>
