form check script added for create map

--- a/src/main/resources/templates/mywork.html
+++ b/src/main/resources/templates/mywork.html
@@ -36,7 +36,7 @@
                         <!--                The Input Form-->
                         <!--/*@thymesVar id="project" type=""*/-->
                         <!--                        th:onsubmit=""-->
-                        <form action="addProject" method="POST">
+                        <form id="mapForm" action="addProject" method="POST">
                             <div class="form-group form-inline">
                                 <label>Orientation:</label>
                                 <select id="orientation" style="padding-left: 10px">
