--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -236,7 +236,7 @@
 
         <div class="col-8 middle">
             <div class="box" id="canvasStorage"
-                 style="height:500px; width: 100%; position:relative; overflow: auto; background-color: gray;">
+                 style="height:900px; width: 100%; position:relative; overflow: auto; background-color: gray; border: 1px solid #999;">
 
                 <div class="canvasGird" id="testGirdy">
                     <canvas id="grid_canvas" class="text-center"></canvas>
