Added restrictions to creating map

--- a/src/main/resources/templates/mywork.html
+++ b/src/main/resources/templates/mywork.html
@@ -51,23 +51,23 @@
                             </div>
                             <div class="form-group">
                                 <label for="mapWidth">Map Width:</label>
-                                <input type="number" step="1" min="1" max="100" class="form-control" id="mapWidth"
+                                <input type="number" step="1" min="1"  class="form-control" id="mapWidth"
                                        placeholder="Enter map width" required>
                             </div>
                             <div class="form-group">
                                 <label for="mapHeight">Map Height:</label>
-                                <input type="number" step="1" min="1" max="100" class="form-control" id="mapHeight"
+                                <input type="number" step="1" min="1"  class="form-control" id="mapHeight"
                                        placeholder="Enter map height" required>
                             </div>
                             <div class="form-group">
                                 <label for="tileWidth">Tile Width:</label>
-                                <input type="number" step="1" min="1" max="100" class="form-control" id="tileWidth"
+                                <input type="number" step="1" min="1" max="32" class="form-control" id="tileWidth"
                                        value="32"
                                        placeholder="Enter tile width" required>
                             </div>
                             <div class="form-group">
                                 <label for="tileHeight">Tile Height:</label>
-                                <input type="number" step="1" min="1" max="100" class="form-control" id="tileHeight"
+                                <input type="number" step="1" min="1" max="32" class="form-control" id="tileHeight"
                                        value="32"
                                        placeholder="Enter tile height" required>
                             </div>
