--- a/src/main/resources/templates/mywork.html
+++ b/src/main/resources/templates/mywork.html
@@ -151,7 +151,7 @@
 
         $.ajax({
             contentType: "application/json",
-            type: "GET",
+            type: "PUT",
             data: JSON.stringify(theProjectID),
             url: "/deleteNewProject",
             success: function (data) {
