--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -91,7 +91,7 @@
             </div>
             <div class="row iconrow">
                 <div class="col">
-                    <a href = "#"><i class="fas fa-download icon" id = "download" title="Download"></i></a>
+                    <a th:href="@{/download/{id}(id=${theProject.id})}"><i class="fas fa-download icon" title="Download"></i></a>
                 </div>
             </div>
             <!--            this is test icons-->
