--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -23,7 +23,7 @@ html, body {
 }
 
 .addButton {
-    height: 100%;
+    height: 428px;
 }
 
 .iconrow {
@@ -263,12 +263,16 @@ body {
 }
 
 #proj_sc {
-    padding: 20px;
     border: 1px solid black;
+    height: 500px;
 }
 
 #user_icon {
     position: relative;
     top: -27px;
     left: 20px;
+}
+
+.screenshotImage{
+    height: 300px;
 }
