--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -68,9 +68,8 @@
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
-                                <div class="modal-body" style="padding:0px !important;">
-                                    <img src="" id="previewImg"
-                                         style="margin: 0 auto !important; width: 100%; height: 100%;">
+                                <div class="modal-body" style="padding:0px !important; overflow: auto; height: 600px">
+                                    <img src="" id="previewImg">
                                 </div>
                                 <div class="modal-footer" style="padding:1rem !important;">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
