--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -84,7 +84,7 @@
             </div>
             <div class="row iconrow">
                 <div class="col">
-                    <i class="fas fa-file-export icon" id="save" title="Export as PNG"></i>
+                    <a href=""><i class="fas fa-file-export icon" id="save" title="Export as PNG"></i></a>
                 </div>
             </div>
             <div class="row iconrow">
