--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -196,11 +196,10 @@
         <div class="col-8 middle">
             <div class="box" id="canvasStorage"
                  style="height:900px; width: 100%; position:relative; overflow: auto; background-color: gray; border: 1px solid #999;">
-
                 <div class="canvasGird" id="testGirdy">
                     <canvas id="grid_canvas" class="text-center"></canvas>
-
                 </div>
+                <center><div class="loader" id="progress" style="display:none;"></div></center>
             </div>
         </div>
 
