update the description on info modal

--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -54,14 +54,14 @@
                             <h2 class="mb-0">
                                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                                         data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    <h2><i class="fas fa-file-import icon"></i>Import</h2>
+                                    <h2><i class="fas fa-file-import icon"></i>Export</h2>
                                 </button>
                             </h2>
                         </div>
                         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
                              data-parent="#accordionExample">
                             <div class="card-body">
-                                Import maps.
+                                Export maps as .png.
                             </div>
                         </div>
                     </div>
@@ -103,7 +103,7 @@
                         <div id="collapseFive" class="collapse" aria-labelledby="headingFive"
                              data-parent="#accordionExample">
                             <div class="card-body">
-                                Download allows users to download the current map that they are working on.
+                                Download allows users to download the .JSON file of current map that they are working on.
                             </div>
                         </div>
                     </div>
@@ -141,7 +141,7 @@
                         <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven"
                              data-parent="#accordionExample">
                             <div class="card-body">
-                                Allows users to erase tiles on the map.
+                                Allows users to erase selected tiles on the map.
                             </div>
                         </div>
                     </div>
